crates/aven-check/tests/fixtures/check/valid/comptime-keysof-record.av
User = { name: Text, email: Text }
UserKey = keysOf(User)
k : UserKey = "name"
