crates/aven-check/tests/fixtures/check/invalid/comptime-keysof-non-member.av
User = { name: Text, email: Text }
UserKey = keysOf(User)
bad : UserKey = "phone"
